minor changes in javadoc, refactored spring autowiring(from fields -> to constructor)